--- a/css/theme/league.css
+++ b/css/theme/league.css
@@ -271,3 +271,10 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #13DAEC; }
+
+.light {
+  opacity: 0.5; }
+
+.column {
+  width: 50%;
+  float: left; }
