--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -269,3 +269,10 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #268bd2; }
+
+.light {
+  opacity: 0.5; }
+
+.column {
+  width: 50%;
+  float: left; }
