--- a/css/theme/sky.css
+++ b/css/theme/sky.css
@@ -272,3 +272,10 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #3b759e; }
+
+.light {
+  opacity: 0.5; }
+
+.column {
+  width: 50%;
+  float: left; }
